# Xenon

./: .gitignore  README.md  index.html  package.json  vite.config.js
src/: data.ts  start.ts  style.css
src-tauri/: .tauriignore  Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  main.rs  start.rs
