[package]
name = "xenon"
version = "0.0.0"
description = "Xenon is a simple, fast, and secure password manager."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
sqlite = "0.30.4"
argon2 = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
rand = "0.8.5"
totp-rs = {version = "4.2.0", features = ["serde_support", "qr"] }
bincode = "1.3.3"
aes-gcm-siv = "0.11.1"
pbkdf2 = "0.11.0"
unicode-truncate = "0.2.0"
blake3 = "1.3.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
